# pixel_buffer_display_sdl

./: CMakeLists.txt  PixelBufferDisplay.cpp  PixelBufferDisplay.h  main.cpp
modules/: FindSDL2.cmake
